feat: Complete AURA 2.0 verification and testing framework
- Added VERIFICATION_STATUS.md to document verification results and production readiness.
- Implemented check_bridge.sh for frontend-backend bridge diagnostics.
- Created graph-data.json for knowledge graph persistence testing.
- Configured jest for unit testing with jest.config.js.
- Developed server integration tests in server.test.js.
- Introduced dynamic tools testing with test_dynamic_tools.sh.
- Verified memory retrieval functionality with test_memory.sh.
- Established priority system checks in test_priority_system.sh.
- Enhanced verification script with comprehensive functional tests in verify.sh.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,17 @@
-# This file is an example. Copy it to .env and fill in your actual secrets.
-API_KEY="YOUR_API_KEY_HERE"
-API_PROVIDER="google_ai" # or "openrouter"
-DEFAULT_MODEL="gemini-2.5-pro" # or any other model
-MCP_BRIDGE_PORT=3000
+# AURA Configuration Template
+# Copy this file to .env and fill in your actual values
+
+# AI Provider Configuration
+API_KEY="YOUR_GOOGLE_AI_KEY_HERE"
+API_PROVIDER="google"
+DEFAULT_MODEL="gemini-2.5-flash"
+
+# Server Configuration
+PORT=8000
+
+# Optional: Custom AI Personality
+AI_NAME="AURA"
+AI_PERSONALITY="personal_assistant"
+
+# Optional: Extended System Prompt (uncomment to customize)
+# SYSTEM_PROMPT="You are AURA, with access to knowledge graph tools (query_graph, create_entities, add_observations) and agent commands (agent_command). Use these tools proactively when users need information retrieval or storage."
