--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "aura-assistant",
   "version": "1.0.0",
   "description": "AURA - Advanced Universal Reasoning Assistant with MCP Integration",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "setup": "npm install",
     "test": "jest --detectOpenHandles",
     "test:watch": "jest --watch"
