Remove .env from repo, add to .gitignore, and protect secrets

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Ignore environment files containing secrets
+.env
 # Environment variables (exclude for production use)
 .env.local
 .env.production
